crates/ars-components/src/specialized/color_picker/snapshots/ars_components__specialized__color_picker__tests__color_picker_trigger_disabled.snap
---
source: crates/ars-components/src/specialized/color_picker/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-picker",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Expanded,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                HasPopup,
            ),
            String(
                "dialog",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Pick a color",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "cp-label",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "cp-content",
            ),
        ),
        (
            Id,
            String(
                "cp-trigger",
            ),
        ),
    ],
    styles: [],
}
